--- a/public/styles/auth.css
+++ b/public/styles/auth.css
@@ -326,3 +326,28 @@ input[type="number"]::-webkit-outer-spin-button {
    
 }
 
+
+.password-container {
+  position: relative;
+  width: 100%;
+}
+
+.password-container .input-field {
+  width: 100%;
+  padding-right: 40px; /* leave space for icon */
+}
+
+.toggle-password {
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+  cursor: pointer;
+  font-size: 16px;
+  color: #777;
+}
+
+.toggle-password:hover {
+  color: #000;
+}
+
