related products bug fixed

--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -78,7 +78,7 @@
           <!-- Price & Add to Cart -->
           <div class="mt-auto flex items-center justify-between">
             <span class="text-2xl font-bold text-gray-900">₹<%= product.basePrice %></span>
-            <a href="/cart/add/<%= product._id %>" class="text-gray-900 bg-yellow-400 hover:bg-gray-600 focus:ring-4 focus:outline-none 
+            <a href="/cart/add/<%= product._id %>" class="text-gray-900 bg-yellow-400 hover:bg-yellow-500 focus:ring-4 focus:outline-none 
                   focus:ring-yellow-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center">
               Add to cart
             </a>
