--- a/views/user/productDetail.ejs
+++ b/views/user/productDetail.ejs
@@ -131,19 +131,19 @@
             </button>
 
             <!-- Product Image -->
-            <a href="/product/<%= product._id %>">
+            <a href="/product/<%= rp._id %>">
               <img class="p-6 rounded-t-lg h-40 w-full object-contain"
-                src="/uploads/<%= (product.images && product.images.length > 0 )? product.images[0] : '/default.jpg' %>"
-                alt="<%= product.name %>" />
+                src="/uploads/<%= (rp.images && rp.images.length > 0 )? rp.images[0] : '/default.jpg' %>"
+                alt="<%= rp.name %>" />
             </a>
 
             <!-- Content -->
             <div class="px-5 pb-5 flex flex-col flex-1">
 
               <!-- Product Name -->
-              <a href="/product/<%= product._id %>">
+              <a href="/product/<%= rp._id %>">
                 <h5 class="text-sm font-semibold tracking-tight text-gray-900 line-clamp-2 h-12 leading-relaxed">
-                  <%= product.name %>
+                  <%= rp.name %>
                 </h5>
               </a>
 
@@ -156,7 +156,7 @@
               <!-- Price & Add to Cart -->
               <div class="mt-auto flex items-center justify-between">
                 <span class="text-lg font-bold text-gray-900">₹<%= rp.basePrice %></span>
-                <a href="/cart/add/<%= rp._id %>" class="text-gray-900 bg-yellow-400 hover:bg-gray-600 focus:ring-4 focus:outline-none 
+                <a href="/cart/add/<%= rp._id %>" class="text-gray-900 bg-yellow-400 hover:bg-yellow-500 focus:ring-4 focus:outline-none 
                         focus:ring-yellow-300 font-medium rounded-lg text-xs px-3 py-1.5 text-center">
                   Add to cart
                 </a>
